# nyancobot

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_zh.md  pyproject.toml
config/: allowed_domains.example.txt  config.example.json  permission_level.txt
nyancobot/: __init__.py
nyancobot/agent/: evaluator.py  loop.py  multi_perspective.py
nyancobot/agent/tools/: browser.py  content_repurpose.py  denrei.py  quality_check.py  shell.py  youtube_transcript.py
nyancobot/agent/tools/browser_stealth/: __init__.py  a11y_snapshot.py  human_actions.py  stealth.js
nyancobot/channels/: __init__.py  base.py  discord_adapter.py  line_adapter.py  slack_adapter.py  webhook_server.py  whatsapp_adapter.py
nyancobot/providers/: litellm_provider.py
scripts/: browser-mcp-server.py  cw_job_hunter.py  denrei-mcp-server.py  memory_search_server.py  self_study.py  vision_secretary.py  web-tools-mcp-server.py  web_tools_part1.py  xai-search-mcp-server.py
tests/: test_evaluator.py  test_multi_perspective.py  test_stealth.py
